--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,15 +1,18 @@
 <resources>
   <string name="app_name">Stock Hawk</string>
 
-  <string name="action_example">Example action</string>
+  <string name="valid_ticker_key" translatable="false">ticker</string>
 
   <string name="action_settings">Settings</string>
   <string name="action_change_units">Change Units</string>
   <string name="symbol_search">Symbol Search</string>
   <string name="content_test">Search for a Stock Symbol</string>
-  <string name="input_hint">FB</string>
-  <string name="input_prefill"></string>
+
+  <string name="input_hint" translatable="false">FB</string>
+  <string name="input_prefill" translatable="false"></string>
+
   <string name="network_toast">Uh-oh! This app requires an internet connection</string>
 
   <string name="floating_button_description">Add new stock</string>
+    <string name="add_ticker_toast">This stock is already saved!</string>
 </resources>
