--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,9 @@
-<resources>
+<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
     <string name="app_name">Stock Hawk</string>
 
     <string name="action_settings">Settings</string>
-    <string name="action_change_units">Change Units</string>
+    <string name="action_change_units_dollars">Change Units To Dollars</string>
+    <string name="action_change_units_percentage">Change Units To Percentage</string>
     <string name="symbol_search">Symbol Search</string>
     <string name="content_test">Search for a Stock Symbol</string>
 
@@ -19,5 +20,12 @@
     <string name="detail_label">Stock Graph for</string>
 
     <string name="title_widget_collection">Stocks</string>
+
+    <!-- Content Descriptions -->
+    <!-- for a11y requirements -->
+    <string name="a11y_symbol">Symbol: <xliff:g id="symbol">%1$s</xliff:g></string>
+    <string name="a11y_price">Price: $<xliff:g id="price">%1$s</xliff:g></string>
+    <string name="a11y_change">Change: <xliff:g id="change">%1$s</xliff:g></string>
+    <string name="a11y_change_dollars">Change: $<xliff:g id="change">%1$s</xliff:g></string>
 
 </resources>
